--- a/exercicios/ex022/fundo006.html
+++ b/exercicios/ex022/fundo006.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         * {
             margin: 0px;
@@ -13,20 +13,33 @@
 
         body {
             height: 100vh;
-            background-color: black;
+            /* background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
+            background-size: cover;
+            background-attachment: fixed; */
+
+            /* Shorthand - background 
+            color > image > position > repeat > [size] > attachment
+            */
+
+            background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
             background-size: cover;
         }
 
         main {
             background-color: white;
-            width: 400px;
+            max-width: 400px;
             padding: 10px;
             margin: auto;
             border: 1px solid darkblue;
             border-radius: 15px;
+            text-align: justify;    
+        }
+
+        h1 {
+            text-align: center;
         }
     </style>
 </head>
@@ -37,6 +50,25 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus delectus quas, commodi officia aut ipsum voluptate vel? Incidunt at et molestiae distinctio, dolore nesciunt, quam illo itaque, officiis mollitia commodi!
             Ab maxime et dolorum eaque quisquam nostrum corporis! Quis asperiores sit nemo suscipit sequi rerum vero numquam, omnis debitis quam consectetur quibusdam reprehenderit a sunt aperiam adipisci. Repellat, doloremque reiciendis.
             Quas at repudiandae aliquid, perferendis, alias quod commodi corporis molestiae corrupti esse necessitatibus sequi suscipit odio numquam libero delectus dicta placeat. Nemo tempore praesentium corrupti id cum soluta, in delectus.
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Libero vitae vel veritatis, quidem sequi provident dignissimos in quo expedita! Molestias blanditiis modi dignissimos voluptatem aliquam maiores animi rem cum doloremque.
+            Omnis quia pariatur, qui cumque quis magnam consequatur alias a. Maiores aut ex aperiam magni quasi eligendi voluptate eum ipsa, quo adipisci harum itaque impedit illum ab rem eaque at.
+            Minima quis alias totam commodi corrupti quo placeat modi praesentium quisquam, asperiores iste, quas ullam. Sunt officiis eius maxime magni distinctio quod eos. Nulla a asperiores labore esse voluptatum quasi!
+            Cumque, accusamus! Id, nesciunt nemo. Magnam facilis fugit nam eligendi voluptate, ad eos? Eos eaque at, labore tenetur molestiae consectetur. Aliquam rerum ipsa, illo perspiciatis sint minima dignissimos nobis reprehenderit! 
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nobis, porro repellat. Deserunt nisi sed rem dolores? Obcaecati, temporibus et dolorem praesentium sint nostrum magnam distinctio delectus iste tenetur ipsam sapiente?
+            <br>
+            <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis quasi, tenetur veritatis illum in esse porro enim dolorum corrupti nihil tempora libero voluptates quibusdam, ut nobis voluptatem vel eos aliquid!
+            Rerum autem error quo dolor iste eius magnam sed quae alias aspernatur corrupti doloremque praesentium, fugiat veniam incidunt? Nam, consequuntur. Inventore perferendis voluptatem laudantium veniam qui consequatur reiciendis assumenda ab!
+            Molestiae delectus eveniet adipisci consequatur. Non voluptates at hic quas laborum quidem architecto odit nemo perferendis neque repellat ex aliquid officiis, est perspiciatis atque sequi culpa, totam enim blanditiis eveniet.
+            Quia assumenda suscipit itaque architecto est aliquid deserunt nam ratione labore excepturi perferendis accusamus officiis esse rem aliquam voluptatem doloremque, sit voluptatum distinctio repellendus minima recusandae debitis dolores impedit? Enim.
+            Dignissimos maiores quaerat quo at numquam. Ea iusto non itaque officia perferendis saepe, dolor quo dolores minima exercitationem eaque aspernatur officiis doloremque optio cumque corporis quae obcaecati. Ex, tempora tempore.
+            <br>
+            <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, soluta ratione, inventore ut est optio laboriosam eum natus eius sed dolor officiis impedit voluptatibus aspernatur maiores molestiae. Ipsam, laboriosam quidem.
+            Adipisci illo aliquid fugit. Nam accusantium dolorem vero iste corporis necessitatibus optio maxime odit repellendus? Consequuntur sint veniam iusto! Alias velit dignissimos perspiciatis laboriosam ipsa veniam quo minima ipsam omnis?
+            Mollitia enim quas cupiditate necessitatibus sequi sint laudantium obcaecati consequuntur quia et, adipisci reiciendis, velit assumenda pariatur. Repellendus mollitia fuga, explicabo, dolorum molestiae nam ab, blanditiis quidem aut voluptas laboriosam.
+            Quasi quo consequatur nisi eius dolor explicabo sunt dolorem deserunt minima libero perspiciatis labore, quas obcaecati harum mollitia corporis ut esse ipsum rerum. Rem quis voluptatum rerum quo delectus doloremque!
+            Nostrum delectus hic maiores, consectetur perspiciatis pariatur et odit possimus nobis eaque? Nulla placeat pariatur dolores deserunt corrupti labore, nemo dolorem in voluptates veritatis a fugiat numquam reprehenderit nam consequatur.
         </p>
     </main>
 </body>
