--- a/desafios/d012/cordel.html
+++ b/desafios/d012/cordel.html
@@ -10,81 +10,90 @@
 <body>
     <header>
         <h1>Cordel Moderno</h1>
-        <p><a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="author" class="links">Por Milton Duarte</a></p>
+        <p>
+             Por <a href="https://www.recantodasletras.com.br/poesias/3186743" target="_blank" rel="author">Milton Duarte</a>
+        </p>
     </header>
-    <main>
-        <section>
-            <p  class="paragrafos">
-                Estou ficando cansado<br>
-                Da tal tecnologia<br>
-                Só se fala por e-mail<br>
-                Mensagem curta e fria<br>
-                Twitter e Facebook<br>
-                Antes que eu caduque<br>
-                Vou dizer tudo em poesia.<br>
-            </p>
-            <div id="div-img1">
-                <p  id="paragrafo-img1">
+
+            <section class="normal">
+                <p>
+                    Estou ficando cansado<br>
+                    Da tal tecnologia<br>
+                    Só se fala por e-mail<br>
+                    Mensagem curta e fria<br>
+                    Twitter e Facebook<br>
+                    Antes que eu caduque<br>
+                    Vou dizer tudo em poesia.
+                </p>
+            </section>
+
+            <section class="imagem">
+                <p>
                     Não é mais como era antes<br>
                     É tudo abreviado<br>
                     "Você" só tem duas letras<br>
                     O "O" e o "E" foi riscado<br>
                     Para declarar o amor<br>
                     Basta botar uma flor<br>
-                    E um coração desenhado.<br>
+                    E um coração desenhado.
                 </p>
-            </div>
-            <p class="paragrafos">
-                Arroba agora não pesa<br>
-                É parte de um endereço<br>
-                Ponto final nem se usa<br>
-                Ou vai até no começo<br>
-                Agora é .com<br>
-                Se o saite é muito bom<br>
-                Ele vale um alto preço.<br>
-            </p>
-            <p class="paragrafos">
-                Pra piorar a liguagem<br>
-                O emoticom é um risco<br>
-                Tem símbolo para tudo<br>
-                Ponto e vírgula e um asterisco<br>
-                Um beijo significa<br>
-                Pra entender como fica<br>
-                Decifre esse rabisco.<br>
-            </p>
-            <div id="div-img2">
-                <p id="paragrafo-img2">
+            </section>
+
+            <section class="normal">
+                <p>
+                    Arroba agora não pesa<br>
+                    É parte de um endereço<br>
+                    Ponto final nem se usa<br>
+                    Ou vai até no começo<br>
+                    Agora é .com<br>
+                    Se o saite é muito bom<br>
+                    Ele vale um alto preço.
+                </p>
+                <p>
+                    Pra piorar a liguagem<br>
+                    O emoticom é um risco<br>
+                    Tem símbolo para tudo<br>
+                    Ponto e vírgula e um asterisco<br>
+                    Um beijo significa<br>
+                    Pra entender como fica<br>
+                    Decifre esse rabisco.
+                </p>
+            </section>
+
+            <section class="imagem">
+                <p>
                     Tenho saudade das cartas<br>
                     Escritas com a própria mão<br>
                     Mandava no mês de Junho<br>
                     Só chegava no Verão<br>
                     Mas matava a saudade<br>
                     Era texto de verdade<br>
-                    Nas linhas do coração.<br>
+                    Nas linhas do coração.
                 </p>
-            </div>
-            <p class="paragrafos">
-                Agora, escrevo e envio<br>
-                Chegando na mesma hora<br>
-                Mas quando vou prosear<br>
-                A pessoa foi embora<br>
-                Abriu outro aplicativo<br>
-                O mundo ficou cativo<br>
-                Da tecnologia do agora.<br>
-            </p>
-            <p class="paragrafos">
-                Felizmente, pra orar<br>
-                Não precisa de internet<br>
-                Deus escuta todo mundo<br>
-                Se quiser, faça esse teste<br>
-                Dois pontos são dois joelhos<br>
-                Seus lábios são aparelhos<br>
-                Deixe que Deus interprete.<br>
-            </p>
-        </section>
-    </main>
+            </section>
+            
+            <section class="normal">
+                <p>
+                    Agora, escrevo e envio<br>
+                    Chegando na mesma hora<br>
+                    Mas quando vou prosear<br>
+                    A pessoa foi embora<br>
+                    Abriu outro aplicativo<br>
+                    O mundo ficou cativo<br>
+                    Da tecnologia do agora.
+                </p>
+                <p>
+                    Felizmente, pra orar<br>
+                    Não precisa de internet<br>
+                    Deus escuta todo mundo<br>
+                    Se quiser, faça esse teste<br>
+                    Dois pontos são dois joelhos<br>
+                    Seus lábios são aparelhos<br>
+                    Deixe que Deus interprete.
+                </p>
+            </section>
     <footer>
-        <p>Site criado por <a class="links" href="https://github.com/wenderson-fe" target="_blank" rel="author">Wenderson Ferreira</a> para o <a class="links" href="https://www.cursoemvideo.com"target="_blank">CursoemVídeo</a></p>
+        <p>Site criado por <a class="links" href="https://github.com/wenderson-fe" target="_blank" rel="author">Wenderson Ferreira</a> para o <a href="https://www.cursoemvideo.com"target="_blank">CursoemVídeo</a></p>
     </footer>
 </body>
 </html>
