--- a/desafios/d014/index.html
+++ b/desafios/d014/index.html
@@ -42,73 +42,83 @@
             color: white;
             background-image: linear-gradient(to right, gray, rgb(180, 180, 180));
         }
+
+        div#container {
+            overflow-x: auto;
+            /* position: absolute;
+            left: 50%;
+            top: 25%;
+            transform: translate(-50%, -50%); */
+        }
     </style>
 </head>
 <body>
-    <table>
-        <caption>Notas</caption>
-        <thead>
-            <tr>
-                <th scope="col" class="th-df" rowspan="2">Área</th>
-                <th scope="col" class="th-df" rowspan="2">Disciplinas</th>
-                <th scope="colgroup" class="th-df" colspan="2">Notas</th>
-                <th scope="col" class="th-df" rowspan="2">Média</th>
-            </tr>
-            <tr>
-                <th scope="col" class="th-df">Nota 1</th>
-                <th scope="col" class="th-df">Nota 2</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <th scope="rowgroup" rowspan="4">Exatas</th>
-                <td>Matemática</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Física</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Química</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Biologia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <th scope="row" class="media-grad" colspan="4">Média de Exatas</th>
-                <td class="th-df">0.0</td>
-            </tr>
-            <tr>
-                <th scope="rowgroup" rowspan="2">Humanas</th>
-                <td>História</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-            <tr>
-                <td>Geografia</td>
-                <td>0.0</td>
-                <td>0.0</td>
-                <td>0.0</td>
-            </tr>
-        </tbody>
-        <tfoot>
-            <tr>
-                <th scope="row" class="media-grad" colspan="4">Média de Humanas</th>
-                <td class="th-df">0.0</td>
-            </tr>
-        </tfoot>
-    </table>
+    <div id="container">
+        <table>
+            <caption> Tabela de Notas</caption>
+            <thead>
+                <tr>
+                    <th scope="col" class="th-df" rowspan="2">Área</th>
+                    <th scope="col" class="th-df" rowspan="2">Disciplinas</th>
+                    <th scope="colgroup" class="th-df" colspan="2">Notas</th>
+                    <th scope="col" class="th-df" rowspan="2">Média</th>
+                </tr>
+                <tr>
+                    <th scope="col" class="th-df">Nota 1</th>
+                    <th scope="col" class="th-df">Nota 2</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th scope="rowgroup" rowspan="4">Exatas</th>
+                    <td>Matemática</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+                <tr>
+                    <td>Física</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+                <tr>
+                    <td>Química</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+                <tr>
+                    <td>Biologia</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+                <tr>
+                    <th scope="row" class="media-grad" colspan="4">Média de Exatas</th>
+                    <td class="th-df">0.0</td>
+                </tr>
+                <tr>
+                    <th scope="rowgroup" rowspan="2">Humanas</th>
+                    <td>História</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+                <tr>
+                    <td>Geografia</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                    <td>0.0</td>
+                </tr>
+            </tbody>
+            <tfoot>
+                <tr>
+                    <th scope="row" class="media-grad" colspan="4">Média de Humanas</th>
+                    <td class="th-df">0.0</td>
+                </tr>
+            </tfoot>
+        </table>
+    </div>
 </body>
 </html>
