Criei o exercício iframe002

--- a/exercicios/ex023/tabela006.html
+++ b/exercicios/ex023/tabela006.html
@@ -47,7 +47,7 @@
     </p>
     <div id="container">
         <table>
-            <caption>Tabelas responsivas</caption>
+            <caption>Vendas de produtos por mês</caption>
             <thead>
                 <tr>
                     <th colspan="5">Produto</th>
