Atualizei o exercício iframe 002

--- a/exercicios/ex024/iframe002.html
+++ b/exercicios/ex024/iframe002.html
@@ -22,7 +22,9 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam facere voluptate sapiente corrupti distinctio nesciunt ullam dignissimos laborum amet, voluptates sed accusantium ipsam unde consequatur tempore. Inventore perspiciatis ab natus.
         Ipsum quisquam ducimus dolores. Enim qui mollitia voluptates necessitatibus rerum! Sequi veniam, eaque qui expedita quibusdam perspiciatis necessitatibus cupiditate atque, exercitationem iure iusto saepe officiis dolorem est quasi! Sed, amet!
     </p>
-    <iframe src="pag001.html" frameborder="0" height="500xp" width="500px"></iframe>
+    <iframe src="pag-extras/pag001.html" frameborder="0" height="500xp" width="500px">
+        <p>Infelizmente o seu navegador não é compatível com isso!</p>
+    </iframe>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem enim molestias unde! Atque quam sint, facere dolorum aliquid odio repudiandae in adipisci, ipsam ratione ullam assumenda recusandae deleniti. Possimus, quaerat!
         Facilis mollitia architecto delectus libero, error quod culpa, quasi maiores expedita nisi rerum assumenda facere, nemo reprehenderit odit. Neque libero quod blanditiis atque quia officia illo cupiditate sunt ullam nesciunt.
