Criei o exercício iframe 004

--- a/exercicios/ex024/pag-extras/pag001.html
+++ b/exercicios/ex024/pag-extras/pag001.html
@@ -42,7 +42,7 @@
 </head>
 <body>
     <table>
-        <caption>Tabelas responsivas</caption>
+        <caption>Vendas de produtos no mês</caption>
         <thead>
             <tr>
                 <th colspan="5">Produto</th>
