--- a/exercicios/ex024/iframe003.html
+++ b/exercicios/ex024/iframe003.html
@@ -33,7 +33,8 @@
     Perspiciatis temporibus placeat explicabo minus fugiat ad corporis, exercitationem eius nemo ipsa quis recusandae aut? Nihil asperiores, corporis repellat officiis architecto veritatis aperiam molestiae animi voluptatem unde illo culpa sint!
     Quos ea et, dolor officiis voluptatibus optio aliquam aspernatur in cumque beatae molestiae magni perspiciatis quod ex. Excepturi aliquam, nisi impedit nam veritatis explicabo soluta reprehenderit praesentium. Nostrum, non eum.</p>
 
-    <iframe src="" id="tela" name="frame">
+    <iframe id="tela" name="frame"srcdoc="<h1>Escolha uma das opções acima</h1><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus unde excepturi qui sequi harum exercitationem optio praesentium impedit rerum provident beatae, delectus illo esse minima cupiditate illum adipisci doloribus ipsum.</p><img src='imagens/download.png'>">
+    
         <p>Infelizmente seu navegador não é compatível com isso.</p>
     </iframe>
 
